--- a/write_data.ipynb
+++ b/write_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -187,44 +187,212 @@
        "      <td>51.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23515</th>\n",
+       "      <td>2014-10-06</td>\n",
+       "      <td>11400007</td>\n",
+       "      <td>Final</td>\n",
+       "      <td>1610612737</td>\n",
+       "      <td>1610612740</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1610612737</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>0.821</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1610612740</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>0.366</td>\n",
+       "      <td>0.643</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23516</th>\n",
+       "      <td>2014-10-06</td>\n",
+       "      <td>11400004</td>\n",
+       "      <td>Final</td>\n",
+       "      <td>1610612741</td>\n",
+       "      <td>1610612764</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1610612741</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.338</td>\n",
+       "      <td>0.719</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1610612764</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>0.411</td>\n",
+       "      <td>0.636</td>\n",
+       "      <td>0.267</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23517</th>\n",
+       "      <td>2014-10-06</td>\n",
+       "      <td>11400005</td>\n",
+       "      <td>Final</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1610612747</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>0.448</td>\n",
+       "      <td>0.682</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>0.387</td>\n",
+       "      <td>0.659</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23518</th>\n",
+       "      <td>2014-10-05</td>\n",
+       "      <td>11400002</td>\n",
+       "      <td>Final</td>\n",
+       "      <td>1610612761</td>\n",
+       "      <td>1610612758</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1610612761</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>0.440</td>\n",
+       "      <td>0.771</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1610612758</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>0.469</td>\n",
+       "      <td>0.725</td>\n",
+       "      <td>0.385</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23519</th>\n",
+       "      <td>2014-10-04</td>\n",
+       "      <td>11400001</td>\n",
+       "      <td>Final</td>\n",
+       "      <td>1610612748</td>\n",
+       "      <td>1610612740</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1610612748</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>0.431</td>\n",
+       "      <td>0.679</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1610612740</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>0.462</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.438</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>23520 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  GAME_DATE_EST   GAME_ID GAME_STATUS_TEXT  HOME_TEAM_ID  VISITOR_TEAM_ID  \\\n",
-       "0    2020-12-19  12000047            Final    1610612753       1610612766   \n",
-       "1    2020-12-19  12000048            Final    1610612764       1610612765   \n",
-       "2    2020-12-19  12000049            Final    1610612763       1610612737   \n",
-       "3    2020-12-18  12000039            Final    1610612754       1610612755   \n",
-       "4    2020-12-18  12000040            Final    1610612761       1610612748   \n",
+       "      GAME_DATE_EST   GAME_ID GAME_STATUS_TEXT  HOME_TEAM_ID  VISITOR_TEAM_ID  \\\n",
+       "0        2020-12-19  12000047            Final    1610612753       1610612766   \n",
+       "1        2020-12-19  12000048            Final    1610612764       1610612765   \n",
+       "2        2020-12-19  12000049            Final    1610612763       1610612737   \n",
+       "3        2020-12-18  12000039            Final    1610612754       1610612755   \n",
+       "4        2020-12-18  12000040            Final    1610612761       1610612748   \n",
+       "...             ...       ...              ...           ...              ...   \n",
+       "23515    2014-10-06  11400007            Final    1610612737       1610612740   \n",
+       "23516    2014-10-06  11400004            Final    1610612741       1610612764   \n",
+       "23517    2014-10-06  11400005            Final    1610612747       1610612743   \n",
+       "23518    2014-10-05  11400002            Final    1610612761       1610612758   \n",
+       "23519    2014-10-04  11400001            Final    1610612748       1610612740   \n",
        "\n",
-       "   SEASON  TEAM_ID_home  PTS_home  FG_PCT_home  FT_PCT_home  ...  AST_home  \\\n",
-       "0    2020    1610612753     120.0        0.433        0.792  ...      23.0   \n",
-       "1    2020    1610612764      99.0        0.427        0.625  ...      24.0   \n",
-       "2    2020    1610612763     116.0        0.400        0.744  ...      21.0   \n",
-       "3    2020    1610612754     107.0        0.371        0.692  ...      19.0   \n",
-       "4    2020    1610612761     105.0        0.380        0.737  ...      27.0   \n",
+       "       SEASON  TEAM_ID_home  PTS_home  FG_PCT_home  FT_PCT_home  ...  \\\n",
+       "0        2020    1610612753     120.0        0.433        0.792  ...   \n",
+       "1        2020    1610612764      99.0        0.427        0.625  ...   \n",
+       "2        2020    1610612763     116.0        0.400        0.744  ...   \n",
+       "3        2020    1610612754     107.0        0.371        0.692  ...   \n",
+       "4        2020    1610612761     105.0        0.380        0.737  ...   \n",
+       "...       ...           ...       ...          ...          ...  ...   \n",
+       "23515    2014    1610612737      93.0        0.419        0.821  ...   \n",
+       "23516    2014    1610612741      81.0        0.338        0.719  ...   \n",
+       "23517    2014    1610612747      98.0        0.448        0.682  ...   \n",
+       "23518    2014    1610612761      99.0        0.440        0.771  ...   \n",
+       "23519    2014    1610612748      86.0        0.431        0.679  ...   \n",
        "\n",
-       "   REB_home  TEAM_ID_away  PTS_away  FG_PCT_away  FT_PCT_away  FG3_PCT_away  \\\n",
-       "0      50.0    1610612766     117.0        0.444        0.864         0.439   \n",
-       "1      45.0    1610612765      96.0        0.402        0.647         0.326   \n",
-       "2      43.0    1610612737     117.0        0.422        0.837         0.297   \n",
-       "3      45.0    1610612755     113.0        0.533        0.629         0.355   \n",
-       "4      37.0    1610612748     117.0        0.534        0.741         0.514   \n",
+       "       AST_home  REB_home  TEAM_ID_away  PTS_away  FG_PCT_away  FT_PCT_away  \\\n",
+       "0          23.0      50.0    1610612766     117.0        0.444        0.864   \n",
+       "1          24.0      45.0    1610612765      96.0        0.402        0.647   \n",
+       "2          21.0      43.0    1610612737     117.0        0.422        0.837   \n",
+       "3          19.0      45.0    1610612755     113.0        0.533        0.629   \n",
+       "4          27.0      37.0    1610612748     117.0        0.534        0.741   \n",
+       "...         ...       ...           ...       ...          ...          ...   \n",
+       "23515      24.0      50.0    1610612740      87.0        0.366        0.643   \n",
+       "23516      18.0      40.0    1610612764      85.0        0.411        0.636   \n",
+       "23517      29.0      45.0    1610612743      95.0        0.387        0.659   \n",
+       "23518      21.0      30.0    1610612758      94.0        0.469        0.725   \n",
+       "23519      18.0      42.0    1610612740      98.0        0.462        0.706   \n",
        "\n",
-       "   AST_away  REB_away  HOME_TEAM_WINS  \n",
-       "0      21.0      52.0               1  \n",
-       "1      18.0      51.0               1  \n",
-       "2      24.0      47.0               0  \n",
-       "3      23.0      48.0               0  \n",
-       "4      30.0      51.0               0  \n",
+       "       FG3_PCT_away  AST_away  REB_away  HOME_TEAM_WINS  \n",
+       "0             0.439      21.0      52.0               1  \n",
+       "1             0.326      18.0      51.0               1  \n",
+       "2             0.297      24.0      47.0               0  \n",
+       "3             0.355      23.0      48.0               0  \n",
+       "4             0.514      30.0      51.0               0  \n",
+       "...             ...       ...       ...             ...  \n",
+       "23515         0.375      17.0      43.0               1  \n",
+       "23516         0.267      17.0      47.0               0  \n",
+       "23517         0.500      19.0      43.0               1  \n",
+       "23518         0.385      18.0      45.0               1  \n",
+       "23519         0.438      19.0      42.0               0  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[23520 rows x 21 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,13 +400,15 @@
    "source": [
     "#load data\n",
     "games_df = pd.read_csv('Data/games.csv')\n",
-    "games_df.head()"
+    "games_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -443,6 +613,15 @@
    "source": [
     "games_details_df = pd.read_csv('Data/games_details.csv')\n",
     "games_details_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "games_combined_df = "
    ]
   },
   {
