--- a/Prediction_Model.ipynb
+++ b/Prediction_Model.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "### %matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import os\n",
@@ -37317,7 +37315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
