commit third branch

--- a/rstest.ipynb
+++ b/rstest.ipynb
@@ -776,10 +776,406 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GAME_DATE_EST</th>\n",
+       "      <th>GAME_ID</th>\n",
+       "      <th>HOME_TEAM_ID</th>\n",
+       "      <th>HOME_TEAM_WINS</th>\n",
+       "      <th>FG_PCTHOME_ROllING</th>\n",
+       "      <th>FT_PCTHOME_ROllING</th>\n",
+       "      <th>FG3_PCTHOME_ROllING</th>\n",
+       "      <th>AST_home_ROllING</th>\n",
+       "      <th>REB_home_ROllING</th>\n",
+       "      <th>VISITOR_TEAM_ID</th>\n",
+       "      <th>FG_PCTAWAY_ROllING</th>\n",
+       "      <th>FT_PCTAWAY_ROllING</th>\n",
+       "      <th>FG3_PCTAWAY_ROllING</th>\n",
+       "      <th>AST_away_ROllING</th>\n",
+       "      <th>REB_away_ROllING</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2003-11-01</td>\n",
+       "      <td>20300028</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>0.8050</td>\n",
+       "      <td>0.3665</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>1610612765</td>\n",
+       "      <td>0.4260</td>\n",
+       "      <td>0.8105</td>\n",
+       "      <td>0.3930</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2003-11-03</td>\n",
+       "      <td>20300041</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.320</td>\n",
+       "      <td>0.7885</td>\n",
+       "      <td>0.3335</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1610612752</td>\n",
+       "      <td>0.4055</td>\n",
+       "      <td>0.9395</td>\n",
+       "      <td>0.0800</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003-11-05</td>\n",
+       "      <td>20300054</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.355</td>\n",
+       "      <td>0.7575</td>\n",
+       "      <td>0.3250</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>1610612741</td>\n",
+       "      <td>0.4110</td>\n",
+       "      <td>0.8350</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003-11-07</td>\n",
+       "      <td>20300069</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.424</td>\n",
+       "      <td>0.6190</td>\n",
+       "      <td>0.3470</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1610612750</td>\n",
+       "      <td>0.4500</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.4645</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>41.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2003-11-12</td>\n",
+       "      <td>20300105</td>\n",
+       "      <td>1610612753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.6025</td>\n",
+       "      <td>0.2720</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>1610612763</td>\n",
+       "      <td>0.4400</td>\n",
+       "      <td>0.7560</td>\n",
+       "      <td>0.4190</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  GAME_DATE_EST   GAME_ID HOME_TEAM_ID  HOME_TEAM_WINS  FG_PCTHOME_ROllING  \\\n",
+       "0    2003-11-01  20300028   1610612753             0.0               0.400   \n",
+       "1    2003-11-03  20300041   1610612753             0.0               0.320   \n",
+       "2    2003-11-05  20300054   1610612753             0.0               0.355   \n",
+       "3    2003-11-07  20300069   1610612753             0.0               0.424   \n",
+       "4    2003-11-12  20300105   1610612753             0.0               0.420   \n",
+       "\n",
+       "   FT_PCTHOME_ROllING  FG3_PCTHOME_ROllING  AST_home_ROllING  \\\n",
+       "0              0.8050               0.3665              17.0   \n",
+       "1              0.7885               0.3335              14.5   \n",
+       "2              0.7575               0.3250              17.0   \n",
+       "3              0.6190               0.3470              19.0   \n",
+       "4              0.6025               0.2720              18.5   \n",
+       "\n",
+       "   REB_home_ROllING VISITOR_TEAM_ID  FG_PCTAWAY_ROllING  FT_PCTAWAY_ROllING  \\\n",
+       "0              34.5      1610612765              0.4260              0.8105   \n",
+       "1              40.0      1610612752              0.4055              0.9395   \n",
+       "2              41.5      1610612741              0.4110              0.8350   \n",
+       "3              35.0      1610612750              0.4500              0.7775   \n",
+       "4              40.5      1610612763              0.4400              0.7560   \n",
+       "\n",
+       "   FG3_PCTAWAY_ROllING  AST_away_ROllING  REB_away_ROllING  \n",
+       "0               0.3930              16.0              45.0  \n",
+       "1               0.0800              21.5              43.0  \n",
+       "2               0.3525              17.5              39.0  \n",
+       "3               0.4645              22.0              41.5  \n",
+       "4               0.4190              20.0              37.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data = pd.merge(home_data, away_data, how=\"inner\", on=[\"GAME_DATE_EST\", \"GAME_ID\"])\n",
+    "clean_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "clean_data = pd.merge(home_data, away_data, how=\"inner\", on=[\"GAME_DATE_EST\", \"GAME_ID\"])"
+    "\n",
+    "clean_data['is_train']=np.random.uniform(0,1,len(clean_data)) <= .75"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = clean_data[clean_data['is_train']==True], clean_data[clean_data['is_train']==False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['FT_PCTHOME_ROllING', 'FG3_PCTHOME_ROllING', 'AST_home_ROllING',\n",
+       "       'REB_home_ROllING', 'VISITOR_TEAM_ID', 'FG_PCTAWAY_ROllING',\n",
+       "       'FT_PCTAWAY_ROllING', 'FG3_PCTAWAY_ROllING', 'AST_away_ROllING',\n",
+       "       'REB_away_ROllING'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature = clean_data.columns[5:15]\n",
+    "feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = pd.factorize(train['HOME_TEAM_WINS'])[0]\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_jobs=2, random_state=0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier(n_jobs=2, random_state=0)\n",
+    "\n",
+    "clf.fit(train[feature],y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = clf.predict(test[feature])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.47, 0.53],\n",
+       "       [0.28, 0.72],\n",
+       "       [0.25, 0.75],\n",
+       "       [0.12, 0.88],\n",
+       "       [0.21, 0.79],\n",
+       "       [0.76, 0.24],\n",
+       "       [0.36, 0.64],\n",
+       "       [0.79, 0.21],\n",
+       "       [0.7 , 0.3 ],\n",
+       "       [0.19, 0.81]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict_proba(test[feature])[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Predicted</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>1480</td>\n",
+       "      <td>914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>702</td>\n",
+       "      <td>2823</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Predicted     0     1\n",
+       "Actual               \n",
+       "0.0        1480   914\n",
+       "1.0         702  2823"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(test['HOME_TEAM_WINS'], pred, rownames=['Actual'], colnames=['Predicted'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.717093717093717\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = (1377 + 2709) / (1377 + 2709 + 689 + 923)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "true_negative_rate = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
